# mensetsu-bot

./: .gitignore  README.md  main.py  pyproject.toml
services/: app.py  config.py  db.py
services/bot/: response.py
services/interview/: __init__.py  candidate_pipeline.py  models.py  question_bank.py
services/routes/: __init__.py  audio.py  common.py  interview.py
