[project]
name = "mensetsu-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "litellm>=1.83.0",
    "openai>=2.31.0",
    "openai-whisper>=20250625",
    "pydantic>=2.13.0",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.44.0",
]
